Fix broken styles on backoffice pages

--- a/resources/assets/scss/modules/_dashboard.scss
+++ b/resources/assets/scss/modules/_dashboard.scss
@@ -132,13 +132,12 @@
     display: flex;
   }
 
-  .card-appointments {
+  .card-panel {
     width: 100%;
     @include margin(25px);
   }
 
-  .is-patient .card-appointments,
-  .is-patient .card-info,
+  .is-patient .card-panel,
   .card.smaller {
     width: 50%;
     @include margin(25px);
